lab6/k8s-web.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web
---
apiVersion: v1
kind: Pod
metadata:
  name: tripviewer
  namespace: web
  labels:
    app: tripviewer
spec:
  containers:
    - name: tripviewer
      image: registryolq8408.azurecr.io/tripinsights/tripviewer:1.0
      ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tripviewer
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: tripviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
